Fix header overflow

--- a/src/sass/book.scss
+++ b/src/sass/book.scss
@@ -76,9 +76,9 @@ $footer-margin-bottom: 1.5*$pica;                                   //page numbe
 $footer-width: 2.5*$pica;                                           //page number width
 $title-margin-top: -$page-padding-y - (2*$pica);                    //title margin (top)
 $title-margin: $title-margin-top -2*$pica 2*$pica -2*$pica;         //title margin
-$title-padding: 3*$pica $page-padding-x 0*$pica $page-padding-x;    //title padding
+$title-padding: 3*$pica $page-padding-x 1*$pica $page-padding-x;    //title padding
 $title-font-size: 28pt;                                             //title font size
-$title-height: 3.5*$pica;                                           //title height
+$title-height: 2.5*$pica;                                           //title height
 $toc-leader-string: ' ';                                            //table of contents leader
 $cover-margin-bottom: 0*$pica;                                      //bottom margin for items on cover page
 $cover-logo-width: 32*$pica;                                        //cover logo image width
@@ -197,7 +197,7 @@ page .title
   color: white;
   font-family: "std-700";
   top: 0;
-  height: $title-height;
+  min-height: $title-height;
   left: 0;
   right: 0;
   margin: $title-margin;
